force-app/main/default/objects/Guild_Member__c/fields/Date_Ceased_Employment__c.field-meta.xml
<CustomField>
    <fullName>Date_Ceased_Employment__c</fullName>
    <label>Date Ceased Employment</label>
    <type>Date</type>
</CustomField>