force-app/main/default/objects/Guild_Member__c/fields/Date_Joined__c.field-meta.xml
<CustomField>
    <fullName>Date_Joined__c</fullName>
    <inlineHelpText>The date this member joined the guild.</inlineHelpText>
    <label>Date Joined</label>
    <type>Date</type>
</CustomField>