force-app/main/default/objects/Guild_Member__c/fields/Levels__c.field-meta.xml
<CustomField>
    <fullName>Levels__c</fullName>
    <description>Total levels of an adventurer&apos;s classes</description>
    <label>Levels</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>