force-app/main/default/objects/Guild_Member__c/fields/Member_ID__c.field-meta.xml
<CustomField>
    <fullName>Member_ID__c</fullName>
    <displayFormat>Member - {0000}</displayFormat>
    <label>Member ID</label>
    <type>AutoNumber</type>
</CustomField>