force-app/main/default/objects/Guild_Member__c/fields/Race__c.field-meta.xml
<CustomField>
    <fullName>Race__c</fullName>
    <label>Race</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Aarakocra</fullName>
            </value>
            <value>
                <fullName>Aasimar</fullName>
            </value>
            <value>
                <fullName>Bugbear</fullName>
            </value>
            <value>
                <fullName>Centuar</fullName>
            </value>
            <value>
                <fullName>Changeling</fullName>
            </value>
            <value>
                <fullName>Dragonborn</fullName>
            </value>
            <value>
                <fullName>Dwarf</fullName>
            </value>
            <value>
                <fullName>Elf</fullName>
            </value>
            <value>
                <fullName>Firbolg</fullName>
            </value>
            <value>
                <fullName>Genasi</fullName>
            </value>
            <value>
                <fullName>Gith</fullName>
            </value>
            <value>
                <fullName>Gnome</fullName>
            </value>
            <value>
                <fullName>Goblin</fullName>
            </value>
            <value>
                <fullName>Goliath</fullName>
            </value>
            <value>
                <fullName>Half-Elf</fullName>
            </value>
            <value>
                <fullName>Halfling</fullName>
            </value>
            <value>
                <fullName>Half-Orc</fullName>
            </value>
            <value>
                <fullName>Hobgoblin</fullName>
            </value>
            <value>
                <fullName>Human</fullName>
            </value>
            <value>
                <fullName>Kalashtar</fullName>
            </value>
            <value>
                <fullName>Kenku</fullName>
            </value>
            <value>
                <fullName>Kobold</fullName>
            </value>
            <value>
                <fullName>Lizardfolk</fullName>
            </value>
            <value>
                <fullName>Loxodon</fullName>
            </value>
            <value>
                <fullName>Minotaur</fullName>
            </value>
            <value>
                <fullName>Orc</fullName>
            </value>
            <value>
                <fullName>Shifter</fullName>
            </value>
            <value>
                <fullName>Simic Hybrid</fullName>
            </value>
            <value>
                <fullName>Tabaxi</fullName>
            </value>
            <value>
                <fullName>Tiefling</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>