force-app/main/default/objects/Guild_Member__c/fields/Reason_For_Leaving__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Leaving__c</fullName>
    <label>Reason For Leaving</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Retired</fullName>
            </value>
            <value>
                <fullName>Found Alternative Employment</fullName>
            </value>
            <value>
                <fullName>Died</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>