force-app/main/default/objects/Guild_Member__c/recordTypes/Administrator.recordType-meta.xml
<RecordType>
    <fullName>Administrator</fullName>
    <active>false</active>
    <description>Guild members who handle personnel, finances, etc.</description>
    <label>Administrator</label>
</RecordType>