force-app/main/default/objects/Guild_Member__c/recordTypes/Adventurer.recordType-meta.xml
<RecordType>
    <fullName>Adventurer</fullName>
    <active>true</active>
    <description>Guild member who handles quests</description>
    <label>Adventurer</label>
</RecordType>