force-app/main/default/objects/Guild_Member__c/recordTypes/Expert.recordType-meta.xml
<RecordType>
    <fullName>Expert</fullName>
    <active>true</active>
    <description>Guild member who handles requests for expertise</description>
    <label>Expert</label>
</RecordType>