force-app/main/default/objects/Guild_Member__c/validationRules/ExpertsMustHaveAtLeastOneProfession.validationRule-meta.xml
<ValidationRule>
    <fullName>ExpertsMustHaveAtLeastOneProfession</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Profession__c , &apos;&apos;)   &amp;&amp;  RecordTypeId =  &apos;0125e0000006hYr&apos;</errorConditionFormula>
    <errorDisplayField>Profession__c</errorDisplayField>
    <errorMessage>Experts must have a profession.</errorMessage>
</ValidationRule>