force-app/main/default/objects/Guild_Member__c/listViews/Expert_View.listView-meta.xml
<ListView>
    <fullName>Expert_View</fullName>
    <columns>NAME</columns>
    <columns>Guild_Hall__c</columns>
    <columns>Profession__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Member_Type__c</field>
        <operation>equals</operation>
        <value>Expert</value>
    </filters>
    <label>Expert View</label>
</ListView>